k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gguf
  labels: 
    app: gguf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gguf
  template:
    metadata:
      labels:
        app: gguf
    spec:
      containers:
      - name: open-source-llm-gguf-api-server-gpu
        image: aiflowzone/instant-llm-gguf-url-deploy:v2.0
        #ports:
        #- containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: "1"
            memory: "45Gi"
            cpu: "10000m"
