k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gguf
spec:
  selector:
    app: gguf
  ports:
  - port: 80
    targetPort: 8000
