k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gguf
  labels:
    name: gguf
spec:
  tls:
  - hosts: 
    - llm-api.kub.sspcloud.fr
  rules:
  - host: llm-api.kub.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gguf
            port: 
              number: 80
